bugfix: route input was centered when focus on iPhone.

--- a/maps.css
+++ b/maps.css
@@ -162,10 +162,10 @@ input.search-query { /* you need specify input to over write bootsrap */
 }
 
 input.route-query { /* you need specify input to over write bootsrap */
-    width: 233px; /* width = 320 - (border*2 + margin-left + margin-right + padding-left + left td.width(32) */
+    width: 168px; /* width = 320 - (border*2 + margin-left + margin-right + padding-left + left td.width(32) but in order to avoid centering input at focus on iPhone, shorter width */
     height: 28px;
     margin: 5px 4px 7px 7px;
-    padding: 0 0 0 40px;
+    padding: 0 30px 0 40px;
     border-radius: 5px;    
 }
 
